@@ -5,10 +5,10 @@ require 'sidekiq/web'
 require 'sidetiq/web'
 
 map '/' do
-  if Settings.web['username'] && Settings.web['password']
+  if Settings.web.username && Settings.web.password
     use Rack::Auth::Basic, 'Protected Area' do |username, password|
-      (username == Settings.web['username'].to_s) &&
-      (password == Settings.web['password'].to_s)
+      (username == Settings.web.username.to_s) &&
+      (password == Settings.web.password.to_s)
     end
   end
 
