@@ -1,3 +1,5 @@
+- Add Docker image. Run Pirozhki in Docker.
+
 Pirozhki 0.2.3, 2014-11-27
 --------------------------
 - Move all configs to application.yml.
